# graphql-microservices-demo

./: README.md  docker-compose.yml  hello.py  pyproject.toml
src/common/: base_service.py
src/graphql_gateway/: Dockerfile  main.py  schema.py
src/products_service/: Dockerfile  models.py  service.py
src/users_service/: Dockerfile  models.py  service.py
