[project]
name = "graphql-microservices-demo"
version = "0.1.0"
description = "A GraphQL gateway demo for microservices"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.3",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "strawberry-graphql[fastapi]>=0.253.1",
    "uvicorn>=0.32.1",
]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pytest>=8.3.4",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
